<resources>
    <string name="app_name">ConstraintLayoutDemo</string>
    <string name="microsoft_flight_simulator_standard">Microsoft Flight Simulator: Standard</string>
    <string name="todo">TODO</string>
    <string name="pg13_simulation_2020">PG13 | Simulation | 2020</string>
    <string name="pg13_simulation_asobo_studios">PG13 | Simulation | Asobo Studios</string>
    <string name="free_with_xbox_live">FREE WITH XBOX LIVE</string>
    <string name="buy_from_49_99">BUY FROM $49.99</string>
    <string name="textview">TextView</string>
    <string name="microsoft_flight_simulator_standard_edition">Microsoft Flight Simulator: Standard Edition</string>
    <string name="asobo_studios">Asobo Studios</string>
    <string name="adventure">Adventure</string>
    <string name="tv">TV</string>
    <string name="similar">Similar</string>
    <string name="rating">Rating</string>
    <string name="_3_0">3.0</string>
    <string name="from_light_planes_to_wide_body_jets_fly_highly_detailed_and_accurate_aircraft_in_the_next_generation_of_microsoft_flight_simulator_test_your_piloting_skills_against_the_challenges_of_night_flying_real_time_atmospheric_simulation_and_live_weather_in_a_dynamic_and_living_world">From light planes to wide-body jets, fly highly detailed and accurate aircraft in the next generation of Microsoft Flight Simulator. Test your piloting skills against the challenges of night flying, real-time atmospheric simulation and live weather in a dynamic and living world.</string>
</resources>